# QM

./: .gitignore  .gitmodules  Makefile.am  README.md  TriCubicInterpolator.cpp  common.cpp  common.h  configure.ac  grid_structures.cpp  grid_structures.h  main.cpp  qm_interpolation.cpp  qm_interpolation.h  read_energy_force_new.cpp  read_energy_force_new.h  test.cpp  trans_rot_coords.h
python/: calculate_energy_new_coords.py  test_calculations_wtr_new.py  trans_rot_coords.py
python/likely/: TriCubicInterpolator.cpp  TriCubicInterpolator.h  likely.pyx  setup.py
python2/: grids_structures.py  trans_rot_coords.py  wtr01.txt
version1/: README.md  TriCubicInterpolator.cpp  common.h  grid_structures.h  qm_interpolation.cpp  read_energy_force_new.h
version1/python/: interp.py  read_energy_force_new.py
version1/python/likely/: likely.cpp  likely.pyd
version1/python2/: lib_atomcoords.py  line.txt  test.cpp
version2/: CMakeLists.txt  Makefile.am  common.cpp  common.h  grid_structures.cpp  main.cpp  qm_interpolation.cpp  qm_interpolation.h  read_energy_force_new.cpp  test.cpp
version2/python/: calculate_energy_new_coords_general.py  grids_structures_general.py  orient_struct_2.py  orient_struct_3.py  read_energy_force_new.py  test_calculations_wtr_new_general.py  trans_rot_coords.py  wtr_wtr_force.txt  wtr_wtr_torque.txt
version3/: CMakeLists.txt  README.md
version3/Xq2EFT/: README.md  eft_calculator.py  grid.py  test_eft_calculator.py  tools.py  wtr01.txt  wtr_wtr_force.txt  wtr_wtr_torque.txt
version3/Xq2EFT/random.bk/: RunDimer.py  all_interp_data.txt  all_qm_data.txt  check.txt  qall.sh  test0001.inp  test0002.inp  test0003.inp  test0004.inp  test0005.inp  test0006.inp  test0007.inp  test0008.inp  test0009.inp  test0010.inp  test0011.inp  test0012.inp  test0013.inp  test0014.inp  test0015.inp  test0016.inp  test0017.inp  test0018.inp  test0019.inp  test0020.inp  test0021.inp  test0022.inp  test0023.inp  test0024.inp  test0025.inp  test0026.inp  test0027.inp  test0028.inp  test0029.inp  test0030.inp  test0031.inp  test0032.inp  test0033.inp  test0034.inp  test0035.inp  (+1966 more)
version3/src/: CMakeLists.txt  common.h  common_test.cpp  eft_calculator.hpp  grid.hpp  grid_test.cpp  main.cpp  tools.h
